--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 0.9em;
+    background-color: rgb(248, 249, 250);
 }
 
 /* VARIABLES */
