séparé footer dans template séparé + réglé problème affichage

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,10 +3,9 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    {% include('partials/_navbar.html.twig') %}
-    <div class="container pt-5 d-flex justify-content-center">
+    <div class="container py-5 d-flex justify-content-center">
 
-    <div class="card col-12 col-sm-9 col-md-6 col-lg-5"> 
+    <div class="card col-12 col-sm-9 col-md-6 col-lg-5 my-5"> 
         <article class="card-body"> 
             <h4 class="card-title text-center mb-4 mt-1">Connexion</h4> 
             <hr> 
@@ -60,5 +59,6 @@
         </article> 
     </div> 
     <!-- card.// -->
+    </div>
 
 {% endblock %}
