--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -4,14 +4,10 @@
 
 {% block body %}
      <!-- Container -->
-    <div class="container-fluid p-0 bg-white">
-            <!-- Header Section -->
-            <header class="header">
-                {% include('partials/_navbar.html.twig') %}
-            </header>
+    <div class="container-fluid px-0 py-5 bg-white">
             <div class="container">
                             <!-- Main Back-office Adhérents -->
-                <section class="backoffice m-5">
+                <section class="backoffice my-3 py-0">
                     <!-- Profil de l'adhérent -->
                     <div class="container-fluid profil text-center mb-5 ">
                         <div class="card" style="width: 20rem;">
