--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,24 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
 
+html, body {
+  height: 100%;
+}
+
+
+.content {
+  flex: 1 0 auto;
+}
+
+.footer {
+  flex-shrink: 0;
+  display: flex;
+  align-items: flex-end;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     font-size: 0.9em;
     background-color: rgb(248, 249, 250);
