--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,20 +1,72 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BlogController!{% endblock %}
+{% block title %}Ynovagroup - Votre groupement de pharmaciens indépendants
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello/h1>
+<!-- Bootstrap Container -->
+<div class="container-fluid p-0">
+<!-- H E A D E R  S E C T I O N -->
+<header class="header">
+    <!-- Navigation with a burger menu -->
+    <nav class="navbar sticky-top navbar-expand-xl navbar-light bg-white ">
+        <a class="navbar-brand" href="#">
+            <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul id="nav" class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#accueil">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">Qui sommes-nous ?</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#valeurs">Nos valeurs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#difference">Notre différence</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#objectifs">Nos objectifs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+                <li class="nav-item adherent">
+                    <a class="nav-link login-btn btn btn-primary adherent-btn btn-sm" href="">
+                        <i></i>
+                        Mon Espace
+                        <i class="far fa-user"></i>
+                    </a>
+                </li>
+                <li class="nav-item adherent">
+                    <a class="nav-link login-btn btn btn-success adherent-btn btn-sm" href="">
+                        <i></i>
+                        Espace Adhérent
+                        <i class="fas fa-sign-in-alt"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+<!-- Section Blog--> 
+<div class="container">
+    <div class="blog mt-5">
+        <h1 class="blog-title mt-5 h1">Titre de l'actualité</h1>
+        <span class="blog-date badge badge-pill badge-success">Posté le 14 juin 2019</span>
+    </div>
+    <img class="img-fluid rounded blog-img mt-3 mb-5" src="http://placehold.it/1440x700" alt="">
+    <div class="blog-post mb-5 p-3">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/sara/Dev/khammileon-designs/Ynovagroup/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/sara/Dev/khammileon-designs/Ynovagroup/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
-    </ul>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, voluptas reprehenderit tenetur, reiciendis vero error eaque voluptatem enim deleniti voluptates asperiores aperiam doloribus eligendi? Hic doloribus atque dicta voluptate aperiam ipsa similique. Aperiam commodi, dolore ab quasi fugiat quam nam, laborum fuga repudiandae, tempora facilis at. Alias magnam expedita architecto?</p>
+    </div>
 </div>
 {% endblock %}
