--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -9,7 +9,6 @@
     <div class="container-fluid p-0 bg-white">
         <!-- H E A D E R  S E C T I O N -->
         <header class="header">
-        {% include('partials/_navbar.html.twig') %}
             <!-- H E R O  S E C T I O N -->
             <section id="hero" src="{{ asset('images/ynovagroup_hero.jpg') }}" class="jumbotron-fluid container-fluid text-center img-fluid">
                 <div class="jumbotron-fluid container-fluid text-center">
@@ -24,7 +23,7 @@
         <!-- M A I N  S E C T I O N -->
         <main class="main container p-0">
             <!-- Citation Section -->
-            <section id="about" class="container-fluid p-0 text-center my-5">
+            <section id="about" class="container-fluid p-0 text-center py-3">
                 <!-- Section heading -->
                 <h2 class="titre h1-responsive font-weight-bold my-5">Qui sommes-nous ?</h2>
                 <div class="wrapper-carousel-fix">
@@ -244,9 +243,9 @@
                 </div>  
             </section>
             <!-- C O N T A C T -->
-            <section id="contact"class="container-fluid p-0 text-center m-5">
+            <section id="contact"class="container-fluid p-0 text-center py-5 m-0">
              <h2 class="titre-contact h1-responsive font-weight-bold my-5">Contact</h2>
-                <form class="m-5">
+                <form class="p-5">
                     <div class="form-group">
                         <label for="formGroupExampleInput2">NOM Prénom</label>
                         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Veuillez renseigner votre identité" required>
@@ -266,28 +265,6 @@
                 </form>
             </section>
         </main>
-        <!-- Footer -->
-        <footer class="footer container-fluid">
-            <div class="footer-dl m-5 text-center">
-                <h6 class="h6 text-uppercase mb-2">Téléchargez notre plaquette</h6>
-                <a href="http://www.ynovagroup.com/Plaquette/Plaquette_YnovaGroup.pdf" class="m-3" id="plaquette">
-                    <i class="fa fa-download fa-3x m-4" aria-hidden="true"></i>
-                </a>
-            </div>
-            <div class="footer-infos m-5 text-center">
-                <h6 class="h6 text-uppercase mb-2">Contactez Ynovagroup</h6>
-                <div class="footer-infos-element">
-                    <a id="mail" href="mailto:contact@ynovagroup.com" class="p-3">contact@ynovagroup.com</a>
-                    <a id="tel" href="tel:+33134205268" class="p-3">+33 (0)1 34 20 52 68</a>
-                </div>    
-
-                <h6 class="h6 text-uppercase mt-4 mb-2">Informations générales</h6>
-                <div class="footer-infos-element">
-                    <a id="rgpd" href="www.ynovagroup.com/rgpd" class="p-3">Politique de confidentialité</a>
-                </div>    
-            </div>
-            <i onclick="topFunction() " id="myBtn" class="fas fa-level-up-alt fa-3x"></i>
-        </footer>
         {# <div class="modal fade" id="myModal">
             <div class="modal-header">
                 <a class="close" data-dismiss="modal">×</a>
