--- a/templates/backend/company/show.html.twig
+++ b/templates/backend/company/show.html.twig
@@ -58,9 +58,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('backend_company_index') }}">back to list</a>
+    <a href="{{ path('backend_company_index') }}">Retourner à la vue générale</a>
 
-    <a href="{{ path('backend_company_edit', {'id': company.id}) }}">edit</a>
+    <a href="{{ path('backend_company_edit', {'id': company.id}) }}">Modifier</a>
 
     {# {{ include('backend/company/_delete_form.html.twig') }} #}
 {% endblock %}
