--- a/templates/security/password.html.twig
+++ b/templates/security/password.html.twig
@@ -27,7 +27,7 @@
 
             <form method="post"> 
                 <div class="form-group"> 
-                    <label for="inputEmail">Votre email</label>
+                    <label for="inputEmail">Votre e-mail</label>
                     <div class="input-group">
                         <div class="input-group-prepend"> 
                             <span class="input-group-text"> 
