--- a/templates/backend/partials/__navbar.html.twig
+++ b/templates/backend/partials/__navbar.html.twig
@@ -2,7 +2,7 @@
     <!-- H E A D E R  S E C T I O N -->
     <header class="header">
         <!-- Navigation with a burger menu -->
-        <nav class="navbar sticky-top navbar-expand-xl navbar-light bg-white">
+        <nav class="fixed-top navbar navbar-expand-xl navbar-light bg-white navbar-fixed-top">
             <a class="navbar-brand" href="#">
                 <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
             </a>
