--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,6 +1,6 @@
 <!-- Navigation with a burger menu -->
 <header class="header">
-    <nav class="navbar sticky-top navbar-expand-xl navbar-light bg-white ">
+    <nav class="navbar fixed-top navbar-expand-xl navbar-light bg-white ">
         <a class="navbar-brand" href="{{ current == 'home'? '#hero' : path('home') }}">
             <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
         </a>
