--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -4,10 +4,10 @@
 
 {% block body %}
      <!-- Container -->
-    <div class="container-fluid px-0 py-5 bg-white">
-            <div class="container">
+    {# <div class="container-fluid px-0 py-5 bg-white"> #}
+            <div class="container-fluid">
                             <!-- Main Back-office Adhérents -->
-                <section class="backoffice my-3 py-0">
+                <section class="backoffice p-5 py-0">
                     <!-- Profil de l'adhérent -->
                     <div class="container-fluid profil text-center mb-5 ">
                         <div class="card" style="width: 20rem;">
@@ -97,6 +97,6 @@
                     </div>
                 </section>
             </div>
-    </div>
+    {# </div> #}
 
 {% endblock %}
