--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -17,7 +17,7 @@
         <h6 class="h6 text-uppercase">Informations générales</h6>
         <div class="footer-infos-element">
             <a id="rgpd" href="{{ path('rgpd') }}" class="p-3">Politique de confidentialité</a>
-            <a id="rgpd" href="{{ path('rgpd') }}" class="p-3">Mentions légales</a>
+            <a id="mentions" href="{{ path('rgpd') }}" class="p-3">Mentions légales</a>
         </div>    
     </div>
             <i onclick="topFunction() " id="myBtn" class="fas fa-level-up-alt"></i>            
