commentaires pour Vincent + quelques modifs

--- a/templates/backend/company/index.html.twig
+++ b/templates/backend/company/index.html.twig
@@ -10,7 +10,8 @@
         <thead>
             <tr>
                 <th>#</th>
-                <th>Nom</th>
+                <th>Nom</th>   
+                {# /vianney je voudrais faire en sorte d'avoir un lien href afin de rediriger vers la page de la pharmacie via backend_company_show  #}
                 <th>Adresse</th>
                 <th>Complément</th>
                 <th>Code postal</th>
