--- a/templates/backend/post/_editModal.html.twig
+++ b/templates/backend/post/_editModal.html.twig
@@ -29,6 +29,13 @@
                   <input class="form-control" type="text" name="picture" id="picture">
               </div>
             </div>
+
+            <div class="input-group">
+              <div class="form-group mr-1">
+                  <label for="isActive">Article publié</label>
+                  <input class="form-control" type="text" name="isActive" id="isActive">
+              </div>
+            </div>
         </form>
       </div>
       <div class="modal-footer">
