--- a/templates/backend/post/index.html.twig
+++ b/templates/backend/post/index.html.twig
@@ -81,6 +81,8 @@
                     $('#content').val(data.content)
                     $('#author').val(data.author)
                     $('#picture').val(data.picture)
+                    $('#isActive').val(data.isActive) 
+                    {# /vianney je souhaite récupérer le oui ou non de isActive afin dafficher et de modifier ou non sa publication #}
 
                     $('#editModal').modal()
 
