--- a/templates/backend/user/_editModal.html.twig
+++ b/templates/backend/user/_editModal.html.twig
@@ -26,6 +26,10 @@
                 <label for="email">Email</label>
                 <input class="form-control" type="text" name="email" id="email">
             </div>
+            <div class="form-group">
+                <label for="isActive">Actif</label>
+                <input class="form-control" type="text" name="isActive" id="isActive">
+            </div>
         </form>
       </div>
       <div class="modal-footer">
