dynamisation des templates

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-
+{% dump(app.user) %}
     <!-- Bootstrap Container -->
     <div class="container-fluid p-0 bg-white">
         <!-- H E A D E R  S E C T I O N -->
