--- a/templates/backend/file/index.html.twig
+++ b/templates/backend/file/index.html.twig
@@ -69,7 +69,7 @@
                     }
                 }
             ],
-            initComplete: function() {
+            'drawCallback': function() {
                 $('.edit-modal').click(function() {
                     var data = $(this).data()
 
