--- a/templates/backend/partials/__sidebar.html.twig
+++ b/templates/backend/partials/__sidebar.html.twig
@@ -7,7 +7,7 @@
               </a>
             </h4>
 
-            <div class="">
+            {# <div class="">
                 <div class="alert alert-success">
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
                         ×</button>
@@ -15,9 +15,9 @@
                     <hr class="message-inner-separator">
                     <p>Vous avez "4" nouveaux messages en attente.</p>
                 </div>
-            </div>
+            </div> #}
 
-            <div class="">
+            {# <div class="">
                 <div class="alert alert-info">
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
                         ×</button>
@@ -25,10 +25,11 @@
                     <hr class="message-inner-separator">
                     <p>Vous avez "5"" nouveaux documents en attente.</p>
                 </div>
-            </div>
+            </div> #}
             {# /vianney je t'ai fais 2 alertes au dessus, est-ce bien ça que tu souhaitais? avec des données dynamiques à l'avenir #}
+            {# non, je voulais une vraie route avec un controller dédié pour afficher aux commerciaux leur notifications et messages #}
             
-            {# <ul class="nav flex-column mb-2">
+            <ul class="nav flex-column mb-2">
               <li class="nav-item">
                 <a class="nav-link" href="#">
                     <i class="fas fa-file-import"></i>
@@ -43,7 +44,7 @@
                     <span class="badge badge-pill badge-primary">2</span>
                 </a>
               </li>
-            </ul> #}
+            </ul>
 
             <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
               <span>Dashboard</span>
