--- a/templates/backend/post/show.html.twig
+++ b/templates/backend/post/show.html.twig
@@ -20,7 +20,7 @@
                 <td>{{ post.content }}</td>
             </tr>
             <tr>
-                <th>Image/document</th>
+                <th>Image</th>
                 <td>{{ post.picture }}</td>
             </tr>
             <tr>
