--- a/templates/backend/user/index.html.twig
+++ b/templates/backend/user/index.html.twig
@@ -73,7 +73,7 @@
                     }
                 }
             ],
-            initComplete: function() {
+            'drawCallback': function() {
                 $('.edit-modal').click(function() {
                     var data = $(this).data()
 
